--- a/public/404.html
+++ b/public/404.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <script type="application/javascript" src='https://www.shippiddge.com/js/theme-mode.js'></script>
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/frameworks.min.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/github.min.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/github-style.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/light.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/dark.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/syntax.css' />
+    <script type="application/javascript" src='http://localhost:1313/js/theme-mode.js'></script>
+    <link rel="stylesheet" href='http://localhost:1313/css/frameworks.min.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/github.min.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/github-style.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/light.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/dark.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/syntax.css' />
     <title>404 Page not found - Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
@@ -25,27 +25,27 @@
 <meta name="keywords"
   content='' />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://www.shippiddge.com/404.html" />
+<link rel="canonical" href="http://localhost:1313/404.html" />
 
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="404 Page not found - Shippiddge.com" />
 <meta name="twitter:description"
   content="" />
-<meta name="twitter:site" content="https://www.shippiddge.com/" />
+<meta name="twitter:site" content="http://localhost:1313/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
-  content="https://www.shippiddge.com/">
+  content="http://localhost:1313/">
 
 
 <meta property="og:type" content="website" />
 <meta property="og:title" content="404 Page not found - Shippiddge.com">
 <meta property="og:description"
   content="" />
-<meta property="og:url" content="https://www.shippiddge.com/404.html" />
+<meta property="og:url" content="http://localhost:1313/404.html" />
 <meta property="og:site_name" content="404 Page not found" />
 <meta property="og:image"
-  content="https://www.shippiddge.com/">
+  content="http://localhost:1313/">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 
