--- a/public/media/animation/index.html
+++ b/public/media/animation/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <script type="application/javascript" src='https://www.shippiddge.com/js/theme-mode.js'></script>
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/frameworks.min.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/github.min.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/github-style.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/light.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/dark.css' />
-    <link rel="stylesheet" href='https://www.shippiddge.com/css/syntax.css' />
+    <script type="application/javascript" src='http://localhost:1313/js/theme-mode.js'></script>
+    <link rel="stylesheet" href='http://localhost:1313/css/frameworks.min.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/github.min.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/github-style.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/light.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/dark.css' />
+    <link rel="stylesheet" href='http://localhost:1313/css/syntax.css' />
     <title>Animation - Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
@@ -25,27 +25,27 @@
 <meta name="keywords"
   content='' />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://www.shippiddge.com/media/animation/" />
+<link rel="canonical" href="http://localhost:1313/media/animation/" />
 
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Animation - Shippiddge.com" />
 <meta name="twitter:description"
   content="" />
-<meta name="twitter:site" content="https://www.shippiddge.com/" />
+<meta name="twitter:site" content="http://localhost:1313/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
-  content="https://www.shippiddge.com/">
+  content="http://localhost:1313/">
 
 
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Animation - Shippiddge.com">
 <meta property="og:description"
   content="" />
-<meta property="og:url" content="https://www.shippiddge.com/media/animation/" />
+<meta property="og:url" content="http://localhost:1313/media/animation/" />
 <meta property="og:site_name" content="Animation" />
 <meta property="og:image"
-  content="https://www.shippiddge.com/">
+  content="http://localhost:1313/">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 
@@ -87,31 +87,31 @@
       <div class="flex-shrink-0 col-12 col-md-9 mb-4 mb-md-0">
         <div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile-color-modes-banner">
           <nav class="UnderlineNav-body">
-  <a class="UnderlineNav-item " href="https://www.shippiddge.com/">
+  <a class="UnderlineNav-item " href="http://localhost:1313/">
     <svg class="octicon octicon-home UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M6.906.664a1.749 1.749 0 0 1 2.187 0l5.25 4.2c.415.332.657.835.657 1.367v7.019A1.75 1.75 0 0 1 13.25 15h-3.5a.75.75 0 0 1-.75-.75V9H7v5.25a.75.75 0 0 1-.75.75h-3.5A1.75 1.75 0 0 1 1 13.25V6.23c0-.531.242-1.034.657-1.366l5.25-4.2Zm1.25 1.171a.25.25 0 0 0-.312 0l-5.25 4.2a.25.25 0 0 0-.094.196v7.019c0 .138.112.25.25.25H5.5V8.25a.75.75 0 0 1 .75-.75h3.5a.75.75 0 0 1 .75.75v5.25h2.75a.25.25 0 0 0 .25-.25V6.23a.25.25 0 0 0-.094-.195Z"></path>
     </svg>
     Home
   </a>
-   <a class="UnderlineNav-item " href="https://www.shippiddge.com/startersquad/">
+   <a class="UnderlineNav-item " href="http://localhost:1313/startersquad/">
     <svg class="octicon octicon-star UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path>
     </svg>
     Starter Squad
   </a>
-      <a class="UnderlineNav-item " href="https://www.shippiddge.com/media/">
+      <a class="UnderlineNav-item " href="http://localhost:1313/media/">
     <svg class="octicon octicon-play UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm4.879-2.773 4.264 2.559a.25.25 0 0 1 0 .428l-4.264 2.559A.25.25 0 0 1 6 10.559V5.442a.25.25 0 0 1 .379-.215Z"></path>
     </svg>
     Media
   </a>
-  <a class="UnderlineNav-item " href="https://www.shippiddge.com/shop/">
+  <a class="UnderlineNav-item " href="http://localhost:1313/shop/">
     <svg class="octicon octicon-gift UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M2 2.75A2.75 2.75 0 0 1 4.75 0c.983 0 1.873.42 2.57 1.232.268.318.497.668.68 1.042.183-.375.411-.725.68-1.044C9.376.42 10.266 0 11.25 0a2.75 2.75 0 0 1 2.45 4h.55c.966 0 1.75.784 1.75 1.75v2c0 .698-.409 1.301-1 1.582v4.918A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25V9.332C.409 9.05 0 8.448 0 7.75v-2C0 4.784.784 4 1.75 4h.55c-.192-.375-.3-.8-.3-1.25ZM7.25 9.5H2.5v4.75c0 .138.112.25.25.25h4.5Zm1.5 0v5h4.5a.25.25 0 0 0 .25-.25V9.5Zm0-4V8h5.5a.25.25 0 0 0 .25-.25v-2a.25.25 0 0 0-.25-.25Zm-7 0a.25.25 0 0 0-.25.25v2c0 .138.112.25.25.25h5.5V5.5h-5.5Zm3-4a1.25 1.25 0 0 0 0 2.5h2.309c-.233-.818-.542-1.401-.878-1.793-.43-.502-.915-.707-1.431-.707ZM8.941 4h2.309a1.25 1.25 0 0 0 0-2.5c-.516 0-1 .205-1.43.707-.337.392-.646.975-.879 1.793Z"></path>
     </svg>
     Shop
   </a>
-  <a class="UnderlineNav-item " href="https://www.shippiddge.com/about/">
+  <a class="UnderlineNav-item " href="http://localhost:1313/about/">
     <svg class="octicon octicon-person UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path>
     </svg>
@@ -265,34 +265,34 @@
 <div class="UnderlineNav user-profile-nav d-block d-md-none position-sticky top-0 pl-3 ml-n3 mr-n3 pr-3 bg-white"
   style="z-index:3;">
   <nav class="UnderlineNav-body">
-     <a class="UnderlineNav-item " href="https://www.shippiddge.com/">
+     <a class="UnderlineNav-item " href="http://localhost:1313/">
     <svg class="octicon octicon-home UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M6.906.664a1.749 1.749 0 0 1 2.187 0l5.25 4.2c.415.332.657.835.657 1.367v7.019A1.75 1.75 0 0 1 13.25 15h-3.5a.75.75 0 0 1-.75-.75V9H7v5.25a.75.75 0 0 1-.75.75h-3.5A1.75 1.75 0 0 1 1 13.25V6.23c0-.531.242-1.034.657-1.366l5.25-4.2Zm1.25 1.171a.25.25 0 0 0-.312 0l-5.25 4.2a.25.25 0 0 0-.094.196v7.019c0 .138.112.25.25.25H5.5V8.25a.75.75 0 0 1 .75-.75h3.5a.75.75 0 0 1 .75.75v5.25h2.75a.25.25 0 0 0 .25-.25V6.23a.25.25 0 0 0-.094-.195Z"></path>
     </svg>
     Home
   </a>
-   <a class="UnderlineNav-item " href="https://www.shippiddge.com/startersquad/">
+   <a class="UnderlineNav-item " href="http://localhost:1313/startersquad/">
     <svg class="octicon octicon-star UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path>
     </svg>
     Starter Squad
   </a>
   
-      <a class="UnderlineNav-item " href="https://www.shippiddge.com/media/">
+      <a class="UnderlineNav-item " href="http://localhost:1313/media/">
     <svg class="octicon octicon-play UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm4.879-2.773 4.264 2.559a.25.25 0 0 1 0 .428l-4.264 2.559A.25.25 0 0 1 6 10.559V5.442a.25.25 0 0 1 .379-.215Z"></path>
     </svg>
     Media
   </a>
   
-  <a class="UnderlineNav-item " href="https://www.shippiddge.com/shop/">
+  <a class="UnderlineNav-item " href="http://localhost:1313/shop/">
     <svg class="octicon octicon-gift UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M2 2.75A2.75 2.75 0 0 1 4.75 0c.983 0 1.873.42 2.57 1.232.268.318.497.668.68 1.042.183-.375.411-.725.68-1.044C9.376.42 10.266 0 11.25 0a2.75 2.75 0 0 1 2.45 4h.55c.966 0 1.75.784 1.75 1.75v2c0 .698-.409 1.301-1 1.582v4.918A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25V9.332C.409 9.05 0 8.448 0 7.75v-2C0 4.784.784 4 1.75 4h.55c-.192-.375-.3-.8-.3-1.25ZM7.25 9.5H2.5v4.75c0 .138.112.25.25.25h4.5Zm1.5 0v5h4.5a.25.25 0 0 0 .25-.25V9.5Zm0-4V8h5.5a.25.25 0 0 0 .25-.25v-2a.25.25 0 0 0-.25-.25Zm-7 0a.25.25 0 0 0-.25.25v2c0 .138.112.25.25.25h5.5V5.5h-5.5Zm3-4a1.25 1.25 0 0 0 0 2.5h2.309c-.233-.818-.542-1.401-.878-1.793-.43-.502-.915-.707-1.431-.707ZM8.941 4h2.309a1.25 1.25 0 0 0 0-2.5c-.516 0-1 .205-1.43.707-.337.392-.646.975-.879 1.793Z"></path>
     </svg>
     Shop
   </a>
 
-  <a class="UnderlineNav-item " href="https://www.shippiddge.com/about/">
+  <a class="UnderlineNav-item " href="http://localhost:1313/about/">
     <svg class="octicon octicon-person UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path>
     </svg>
@@ -315,7 +315,7 @@
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
-                <a href="https://www.shippiddge.com/media/animation/animation00/"></a>
+                <a href="http://localhost:1313/media/animation/animation00/"></a>
               </h3>
             </div>
 
@@ -500,7 +500,7 @@
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
-                <a href="https://www.shippiddge.com/media/animation/animation01/"></a>
+                <a href="http://localhost:1313/media/animation/animation01/"></a>
               </h3>
             </div>
 
@@ -680,7 +680,7 @@
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
-                <a href="https://www.shippiddge.com/media/animation/animation02/"></a>
+                <a href="http://localhost:1313/media/animation/animation02/"></a>
               </h3>
             </div>
 
@@ -849,14 +849,14 @@ if (twitterIconElement) {
 
 </body>
 
-<script type="application/javascript" src="https://www.shippiddge.com/js/github-style.js"></script>
+<script type="application/javascript" src="http://localhost:1313/js/github-style.js"></script>
 
 
 
 
 
 <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
-<script type="application/javascript" src='https://www.shippiddge.com/js/search.js'></script>
+<script type="application/javascript" src='http://localhost:1313/js/search.js'></script>
 
 
 
